@@ -1,3 +1,7 @@
+2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network-iface.c network-iface-ethernet.c: implemented (get_xml)
+
 2004-11-15  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* connection.c (wireless_essid_get_model),
